# TabletTracker

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  BACKUP_SYSTEM_COMPLETE.txt  CHANGELOG.md  CONSOLIDATION_COMPLETE.md  CRITICAL_FIXES_NEEDED.md  CRITICAL_PATH_FIXES_v2.0.1.md  DATABASE_AGENT_REPORT.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_FIX_V2.3.0.md  DEPLOYMENT_GUIDE_V1.37.1.md  DEPLOY_SECURITY_FIXES.md  DEPLOY_TO_PYTHONANYWHERE.md  DEPLOY_V1.15.0.sh  DEPLOY_V1.15.8.sh  DEPLOY_V1.21.0.sh  DRAFT_FEATURE_STATUS.md  Dockerfile  EMERGENCY_ROLLBACK.md  FEATURE_PUSH_TO_ZOHO_RECEIVES.md  FINAL_DEPLOYMENT_FIX.md  FIX_IMPORT_CONFLICT.md  MIGRATION_FIX_V2.21.10.md  MIGRATION_STRATEGY.md  PRODUCTION_DEPLOYMENT_V2.8.0.md  PRODUCTION_DEPLOY_GUIDE.md  README.md  REFACTORING.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  REFACTOR_COMPLETE.md  REFACTOR_STATUS.md  REFACTOR_V2_COMPLETE.md  ROLLBACK_INSTRUCTIONS.md  ROLLBACK_NOW.sh  SECURITY.md  (+70 more)
app/: __init__.py  __version__.py  config.py
backups/: .gitignore
database/: DATABASE_MANAGEMENT.md  INDEX.md  README.md  add_bottle_columns.py  add_closed_column.py  add_inventory_item_id_column.py  add_product_category_column.py  add_product_variety_columns.py  add_receipt_number_column.py  add_receive_status_column.py  add_tablets_pressed_column.py  add_variety_pack_columns.py  analyze_bag_relationship.py  backfill_inventory_item_id.py  backfill_machine_id_submissions.py  backfill_machine_submissions.py  backfill_missing_data.py  backfill_receive_names.py  backup_manager.py  check_backup_schedule.py  check_categories.py  (+22 more)
(+299 files in other folders)
