[project]
name = "tablettracker"
description = "TabletTracker application"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["version"]

[project.optional-dependencies]
dev = ["ruff>=0.8,<1"]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["app", "tests", "scripts", "database"]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
]
ignore = [
    "E501",  # line length — handled by formatter preference
]

[tool.ruff.lint.per-file-ignores]
"app/models/migrations.py" = ["W291"]
"app/blueprints/api/__init__.py" = ["E402", "F401"]
"app/blueprints/api_receiving/__init__.py" = ["E402", "F401"]

[tool.ruff.format]
quote-style = "preserve"
